# bullet

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Pipfile  Procfile  README.md  bullet.py  compose.yml  development.Dockerfile  docker-compose.yaml  helper.py  heroku.yml  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  pyproject.toml  pyrightconfig.json  requirements.in  requirements.txt  setup.cfg  start.sh  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: build.yml  linters.yml  migrations.yml
bullet/: .env.example  .~lock.cz.csv#  Caddyfile  dev_setup.sh  entrypoint.sh  fixtures.json  manage.py  start.sh  useful_commands.md  uwsgi.ini
bullet/bullet/: __init__.py  asgi.py  constants.py  hosts.py  search.py  settings.py  urls.py  views.py  wsgi.py
bullet/bullet/settings/: base.py  collect_static.py  development.py  heroku.py  production.py
bullet/bullet_admin/: access.py  access_v2.py  admin.py  apps.py  components.py  csv_import.py  fields.py  mixins.py  models.py  sidebar.py  urls.py  utils.py
bullet/competitions/: admin.py  branches.py  middleware.py  registration_flow.py  urls.py
bullet/countries/: admin.py  middleware.py  models.py  resolvers.py  utils.py  views.py
bullet/documents/: admin.py  models.py
bullet/education/: admin.py  models.py  tasks.py
bullet/gallery/: admin.py  apps.py  constants.py  models.py  signals.py  thumbnails.py  urls.py
bullet/myadmin/: middleware.py
bullet/problems/: admin.py  logic.py  models.py  urls.py  views.py
bullet/users/: admin.py  logic.py  validators.py
bullet/web/: admin.py  apps.py  content_blocks.py  context_processors.py  dynamic_translations.py  fields.py  forms.py  middleware.py  models.py  urls.py  urls_admin.py  urls_junior.py  urls_math.py  urls_physics.py  urls_shared.py  views.py  widgets.py
css/: app.css
docs/: 00-git.md  01-install.md  02-ide.md  03-import-schools.md  04-translations.md  README.md
(+628 files in other folders)
