[project]
name = "bullet"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "django-address>=0.2.8",
    "django-debug-toolbar>=5.0.1",
    "django-phonenumber-field>=8.0.0",
    "phonenumbers>=8.13.53",
    "Django>=5.1.5",
    "django-recaptcha>=4.0.0",
    "markdown>=3.7",
    "django-countries>=7.6.1",
    "django-widget-tweaks>=1.5.0",
    "geoip2>=4.8.1",
    "django-timezone-field>=7.1",
    "tzdata>=2024.2",
    "pillow>=11.1.0",
    "django-minify-html>=1.11.0",
    "django-htmx>=1.21.0",
    "meilisearch>=0.33.1",
    "pikepdf>=9.5.1",
    "django-silk>=5.3.2",
    "django-simple-history>=3.7.0",
    "reportlab>=4.2.5",
    "sentry-sdk>=2.20.0",
    "django-web-components>=0.2.0",
    "django-rq>=3.0.0",
    "beautifulsoup4>=4.12.3",
    "django-probes>=1.7.0",
    "django-environ>=0.12.0",
    "pyyaml>=6.0.2",
    "psycopg[binary]>=3.2.4",
    "jinja2>=3.1.5",
    "django-cleanup>=9.0.0",
    "gunicorn>=23.0.0",
    "django-ipware>=7.0.1",
    "django-types>=0.20.0",
]

[tool.bumpver]
current_version = "2026.6"
version_pattern = "YYYY.[INC1]"
commit_message = "🎉 Release {new_version}"
commit = true
tag = true
push = true

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "factory-boy>=3.3.1",
    "mdgen>=0.1.10",
    "bumpver>=2024.1130",
    "ruff>=0.9.2",
]

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"']
"bullet/bullet/__init__.py" = ['{version}']

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.ruff.lint]
select = [
  "E4", "E7", "E9",  # pycodestyle errors (default from ruff)
  "F",  # pyflakes
  "I",  # isort
  "N",  # naming conventions
  "T20", # print()
  "Q",  # quotes
  "A",  # overwritting builtins
  "LOG", # logging
  # TODO: the following two should get enabled once we pass
  #"DJ", # Django
  #"PTH", # use pathlib
]
